--- a/style.css
+++ b/style.css
@@ -8,13 +8,25 @@
     max-width: 1100px;
   }
 
+.header{
+    padding: 20px;
+  }
 
 
 
+.search-wrapper{
+  display: block;
+  background:rgb(1, 91, 165);
+  color:white;
+  padding: 50px;
+}
 
 
-
-
+.search-index-input{
+  width:400px;
+  margin-left:50%;
+  margin-top: 20px;
+}
 
 
 
